--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <title>Home</title>
 
-  <link rel="icon" href="img/Poze proiect/logo1.jpg" type="image/png">
-  <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
-  <link rel="stylesheet" href="vendors/linericon/style.css">
-  <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
-  <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="vendors/nice-select/nice-select.css">
-  <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" href="/img/Poze proiect/logo1.jpg" type="image/png">
+  <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/vendors/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="/vendors/themify-icons/themify-icons.css">
+  <link rel="stylesheet" href="/vendors/linericon/style.css">
+  <link rel="stylesheet" href="/vendors/owl-carousel/owl.theme.default.min.css">
+  <link rel="stylesheet" href="/vendors/owl-carousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="/vendors/nice-select/nice-select.css">
+  <link rel="stylesheet" href="/vendors/nouislider/nouislider.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/custom.css">
+
 
 </head>
 <body>
@@ -44,7 +45,8 @@
           </div>
           <div class="card-body">
             <p th:text = "${productDto.category}"></p>
-            <h4 class="card-product__title"><a th:text="${productDto.name}" href="single-product.html"></a></h4>
+
+            <h4 class="card-product__title"><a th:text="${productDto.name}" th:href="@{/product/{x}(x=${productDto.id})}"></a></h4>
             <p th:text="${'$' + productDto.price}" class="card-product__price"></p>
           </div>
         </div>
