add user registration

--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -54,7 +54,7 @@
                                    onblur="this.placeholder = 'Quantity'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{description}" type="text" class="form-control" id="description"
+                            <input th:field="*{description}" type="textarea" class="form-control" id="description"
                                    name="description" placeholder="Description" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Description'">
 
