--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -46,14 +46,15 @@
                             <input th:field="*{email}" type="text" class="form-control" id="email" name="email"
                                    placeholder="Email Address" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Email Address'">
+                            <p th:each="error : ${#fields.errors('email')}" th:text="${error}"></p>
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{password}" type="text" class="form-control" id="password" name="password"
+                            <input th:field="*{password}" type="password" class="form-control" id="password" name="password"
                                    placeholder="Password" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Password'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{confirmPassword}" type="text" class="form-control" id="confirmPassword"
+                            <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword"
                                    name="confirmPassword" placeholder="Confirm Password" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Confirm Password'">
                         </div>
