added cartEntytis and menu

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-
+<div th:insert="fragments/menu :: menu" ></div>
 <!-- ================ trending product section start ================= -->
 <section class="section-margin calc-60px">
   <div class="container">
