--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -53,11 +53,13 @@
                             <input th:field="*{password}" type="password" class="form-control" id="password" name="password"
                                    placeholder="Password" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Password'">
+                            <p th:each="error : ${#fields.errors('password')}" th:text="${error}"></p>
                         </div>
                         <div class="col-md-12 form-group">
                             <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword"
                                    name="confirmPassword" placeholder="Confirm Password" onfocus="this.placeholder = ''"
                                    onblur="this.placeholder = 'Confirm Password'">
+                            <p th:each="error : ${#fields.errors('confirmPassword')}" th:text="${error}"></p>
                         </div>
 
                         <div class="col-md-12 form-group">
