--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -28,8 +28,8 @@
 
           <ul class="nav-shop">
             <li sec:authorize="isAuthenticated()" class="nav-item">Hello <span sec:authentication="name"></span>!</li>
-            <li class="nav-item"><button><i class="ti-search"></i></button></li>
-            <li class="nav-item"><button><i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span></button> </li>
+<!--            <li class="nav-item"><button><i class="ti-search"></i></button></li>-->
+<!--            <li class="nav-item"><button><i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span></button> </li>-->
             <li sec:authorize="hasRole('ROLE_BUYER')" class="nav-item"><a class="button button-header" href="/checkout">Checkout</a></li>
           </ul>
         </div>
